--- a/css/style2.css
+++ b/css/style2.css
@@ -137,7 +137,7 @@
   transform: translate(-50%, -50%);
 }
 
-/* tiles & overlays */
+/* styles */
 
 .grid {
     padding: 50px;
@@ -184,3 +184,21 @@
 .intro_section h3 {
     margin-bottom: 10px;
 }
+
+button {
+    display: block;
+    width: 100px;
+    height: 40px;
+    margin: 10px auto;
+    padding: 5px;
+    border: none;
+    border-radius: 6px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(119, 0, 255);
+  }
+  
+  button:hover,
+  button:active {
+    cursor: pointer;
+    background-color: rgb(73, 106, 252);
+  }
