--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,8 @@
 
 .overlay_content {
   position: absolute;
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
 }
