--- a/css/style.css
+++ b/css/style.css
@@ -120,10 +120,13 @@
   height: 100vh;
   max-width: 1800px;
   margin: 0 auto;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  -webkit-background-size: cover; 
+  -moz-background-size: cover; 
+  -o-background-size: cover; 
 }
 
 .gradient {
@@ -157,12 +160,6 @@
   position: absolute;
   top: 50%; left: 50%;
   transform: translate(-50%, -50%);
-}
-
-@media all and (min-width: 768px) {
-  .paralax {
-    background-attachment: fixed;
-  }
 }
 
 /* tiles & overlays */
