--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,6 @@
   }
   .profilePic {
 
-   right:80px;top:150px;
    width: 750px; 
    margin: 0 auto 0;
   }
@@ -109,7 +108,7 @@
   
   .introContainer .introCopyStyle {
     font-size:22px;
-    line-height:28px;
+    line-height:40px;
     color:#333333;
     letter-spacing:2px;
     padding-top:20px;
@@ -157,7 +156,7 @@
   opacity: 0;
   height: 100%;
   width: 100%;
-  transition: ease-in .2s;
+  transition: all .3s ease-in-out;
   text-align: center;
   color: white;
 }
@@ -181,7 +180,9 @@
 .overlay_content>h2 {
   font-size: 1.35em;
 }
-
+.overlay_content p {
+  text-shadow: 0px 0px 9px rgba(0,0,0,0.4);
+}
 
 .line {
   border-bottom: 1px solid white;
@@ -202,8 +203,9 @@ button {
   padding: 5px;
   border: none;
   border-radius: 6px;
-  color: rgb(255, 255, 255);
+  color: #333;
   background-color: rgba(255, 255, 255, .5);
+  transition: background-color 0.3s ease-in-out;
 }
 button.buttonLg {
   width: 120px;
@@ -211,7 +213,6 @@ button.buttonLg {
   padding: 5px;
   border: none;
   border-radius: 6px;
-  color: rgb(255, 255, 255);
   background-color: rgba(255, 255, 255, .5);
 }
 button:hover,
@@ -227,16 +228,41 @@ button>a {
 }
 
 .purple {
-  background-color: rgba(111, 0, 255, 0.5);
+	background: linear-gradient(-45deg, #8c00ff83, #8868b381);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+  backdrop-filter: blur(3px);
+  height: 100%;
 }
 
 .red {
-  background-color: #ff004c59;
+	background: linear-gradient(-45deg, #ff003777, #ff8d8d73);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+  backdrop-filter: blur(3px);
+  height: 100%;
 }
 
 .blue {
-  background-color: rgba(51, 133, 228, 0.4);
+	background: linear-gradient(-45deg, #0011ff80, #9a93ff81);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+  backdrop-filter: blur(3px);
+  height: 100%;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
 /* footer */
 
@@ -295,9 +321,50 @@ button>a {
   justify-content: center;
 }
 
+/* nest hub */
+
+@media all and (max-width: 1280px) {
+    .introContainer {
+    padding-top: 30px;
+    padding-right:50px;
+    width:60%;
+  }
+  .profilePic {
+
+   right:80px;top:150px;
+   width: 450px; 
+   margin: 0 auto 0;
+  }
+}
+
+@media all and (max-width: 1024px) and (max-height: 600px) {
+    .introContainer {
+    padding-top: 10px;
+    padding-right:50px;
+    width:60%;
+  }
+  .profilePic {
+
+   right:80px;top:150px;
+   width: 400px; 
+   margin: 0 auto 0;
+  }
+
+    .introContainer .introCopyStyle {
+    font-size:18px;
+    line-height:34px;
+    color:#333333;
+    letter-spacing:2px;
+    padding-top:20px;
+  }
+    .overlay_content p {
+  display: none;
+  }
+}
+
 /* mobile */
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1023px) {
 
   /* nav */
 
@@ -370,9 +437,9 @@ button>a {
     }
     .profilePic {
       display:block;
-     width:70%;
+     width:60%;
      max-width: 500px; 
-     margin: 0 auto 0;
+     margin: 20px auto 0;
     }
     .introContainer .introNameStyle {
       font-size:30px;
@@ -382,7 +449,7 @@ button>a {
     
     .introContainer .introCopyStyle {
       font-size:14px;
-      line-height:20px;
+      line-height:24px;
       text-align:center;
     }
   
@@ -408,4 +475,5 @@ button>a {
     padding:0 20px;
   }
 }
+
 
